# MemoryOptimizer-

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: FloatingWindow.cpp  FloatingWindow.h  MemoryOptimizer.cpp  MemoryOptimizer.h  main.cpp  resource.h  resource.rc
